--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -64,6 +64,10 @@ html {
     margin-right: 1.5rem;
 }
 
+.full {
+    width: 100%;
+}
+
 
 
 /* --- HEADER ---*/ 
@@ -122,7 +126,7 @@ html {
     }
     
     .mobile {
-        display: contents;
+        display: initial;
     }
 }
 
@@ -149,7 +153,6 @@ html {
     font-family: "Sintony", sans-serif;
     font-size: 4rem;
     font-weight: 700;
-    color: #2E0927;
 }
 
 .cta h2 {
@@ -164,17 +167,144 @@ html {
     font-family: "Poppins", serif;
     font-size: 2rem;
     text-align: center;
-    background-color: rgb(46, 9, 39);
+    background-color: #04756F;
     padding: .5rem;
     width: 60%;
     margin-top: 3rem;
-    border-radius: .5rem;
-    
+    border-radius: .5rem; 
+}
+
+.cta-btn a {
+    text-decoration: none;
+    color: white;
+}
+
+/*--- MAIN CONTENT SECTION ---*/
+
+#main-content {
+    padding: 2rem 0 2rem 1.5rem;
+}
+
+.information-img img {
+    max-width: 100%;
+    height: auto;
+}
+
+.information-img {
+    width: 60%;
+    margin-bottom: 2rem;
+    margin-right: 1.5rem;
 }
 
 
+.main-news h2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 2.3rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+}
 
+.main-news p {
+    font-family: "Poppins", serif;
+    line-height: 1.5;
+    margin-bottom: 2rem;
+}
 
+.main-news span {
+    font-family: "Poppins", serif;
+    font-style: italic;
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+/*--- SUB CONTENT SECTION --*/
+
+.sub-content {
+    width: 40%;
+    height: auto;
+}
+
+.sub-img {
+    width: 35%;
+    height: 100%;
+    margin: 1rem;
+}
+
+.sub-img img {
+    width: 100%;
+    height: auto;
+}
+
+.sub-text {
+    width: 65%;
+    margin-left: 2rem;
+}
+
+.sub-text h3 {
+    font-family: "Sintony", serif;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1.2rem;
+}
+.sub-text p {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.2rem;
+    margin-bottom: 1.2rem;
+}
+
+.sub-text a {
+    font-family: "Poppins", sans-serif;
+    color: #04756F;
+    text-decoration: none;
+    font-weight: 700;
+    
+}
+
+.sub-news {
+    align-items: center;
+    margin: 0 0 1.5rem 1rem;
+}
+
+.sub-content .sub-news:last-child {
+    background-color: rgba(255, 140, 0, 0.7);
+}
+
+/*--- START LEARNING SECTION ---*/
+
+#learning {
+    background-color: rgba(255, 140, 0, 0.7);
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
+}
+
+#learning h1 {
+    font-family: "Sintony", serif;
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 2rem;
+}
+
+.courses {
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    justify-content: space-between;
+}
+
+.course {
+    width: 30%;
+    margin-right: 2rem;
+    padding-bottom: 1.5rem;
+    margin-top: 0;
+    background-color: #fff;
+}
+
+.course-info {
+    margin-top: 1rem;
+}
 
 
 
