--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,6 +49,15 @@ html {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/*--- GENERAL CLASSES ---*/
+
+.section-main-title {
+    font-family: "Sintony", serif;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin: 2rem;
+}
+
 /*--- CONTAINERS / TRANSFORMS---*/
 
 .flex {
@@ -59,13 +68,9 @@ html {
     text-transform: uppercase;
 }
 
-.container {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-}
-
-.full {
-    width: 100%;
+.full-container {
+    width: 99%;
+    margin: 0 auto;
 }
 
 
@@ -181,9 +186,11 @@ html {
 
 /*--- MAIN CONTENT SECTION ---*/
 
-#main-content {
-    padding: 2rem 0 2rem 1.5rem;
+
+.content-container {
+   margin: 2rem 0 2rem 1.5rem; 
 }
+
 
 .information-img img {
     max-width: 100%;
@@ -276,51 +283,108 @@ html {
     background-color: rgba(255, 140, 0, 0.7);
     justify-content: center;
     flex-wrap: wrap;
-    padding-left: 4.5rem;
-    padding-right: 4.5rem;
-}
-
-#learning h1 {
-    font-family: "Sintony", serif;
-    font-size: 3rem;
-    font-weight: 700;
-    margin: 2rem;
 }
 
 .courses {
     flex-wrap: wrap;
-    margin-bottom: 2rem;
-    margin-right: 2rem;
-    justify-content: space-between;
+    margin: 0 4.5rem 1rem 4.5rem;
+    justify-content: space-around;
 }
 
 .course {
     width: 30%;
-    margin-right: 2rem;
-    padding-bottom: 1.5rem;
-    margin-top: 0;
     background-color: #fff;
+    margin-left: 0;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+}
+
+.learning-img {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.learning-img img {
+    width: 100%;
+    height: auto;
 }
 
 .course-info {
-    margin-top: 1rem;
+    padding: 1rem;
 }
 
+.course-info h3 {
+    font-family: "Poppins", serif;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.course-info span {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.2rem;
+    color: #04756F;
+}
+
+.course-info p {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    color: #04756F;
+}
+
+/*--- THESIS EXHIBIT SECTION ---*/ 
 
 
+#thesis h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
 
+.thesis-video {
+    width: 60%;
+    margin-bottom: 2rem;
+    margin-right: 1.5rem;
+}
 
+.thesis-video video {
+    width: 100%;
+    height: auto;
+}
 
+.sub-content .sub-thesis:first-child {
+    background-color: rgba(255, 140, 0, 0.7);
+}
 
+.sub-content .sub-thesis:last-child {
+    background-color: #fff;
+}
 
+/*--- FOOTER ---*/
 
+footer {
+    font-family: "Sitony", sans-serif;
+    justify-content: space-between;
+    height: 3rem;
+    margin-top: 1rem;
+    margin-left: 1.5rem;
+    border-top: solid 1px #04756F;
+    padding-top: .5rem;
+}
 
+footer a {
+    color: #04756F;
+}
 
+.terms {
+    margin-right: 1rem;
+}
 
-
-
-
-
+footer span {
+    margin: 1rem;
+}
 
 
 
