--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -49,7 +49,12 @@ html {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-/*--- GENERAL CLASSES ---*/
+/*--- GENERAL STYLES / CLASSES ---*/
+
+a:hover {
+    text-decoration: underline;
+    opacity: .5;
+}
 
 .section-main-title {
     font-family: "Sintony", serif;
@@ -94,7 +99,12 @@ html {
     margin: 1rem;
 }
 
-.nav-desktop span:hover {
+.nav-desktop a {
+    text-decoration: none;
+    color: #04756F;
+}
+
+.nav-desktop a:hover {
     font-weight: 700;
     text-decoration: underline;
 }
@@ -184,6 +194,15 @@ html {
     color: white;
 }
 
+.cta-btn a:hover {
+    text-decoration: underline;
+    font-weight: 700;
+    transition-duration: 100ms;
+    transition-timing-function: ease-in-out;
+}
+
+
+
 /*--- MAIN CONTENT SECTION ---*/
 
 
@@ -264,9 +283,13 @@ html {
     font-family: "Poppins", sans-serif;
     color: #04756F;
     text-decoration: none;
-    font-weight: 700;
-    
+    font-weight: 700; 
 }
+
+.sub-text a:hover {
+    text-decoration: underline;
+}
+
 
 .sub-news {
     align-items: center;
@@ -320,6 +343,16 @@ html {
     margin-bottom: 1rem;
 }
 
+.course-info a {
+    text-decoration: none;
+    color: black;
+}
+
+.course-info a:hover {
+    text-decoration: underline;
+    font-weight: 400;
+}
+
 .course-info span {
     font-family: "Poppins", sans-serif;
     font-size: 1.2rem;
@@ -369,13 +402,13 @@ footer {
     justify-content: space-between;
     height: 3rem;
     margin-top: 1rem;
-    margin-left: 1.5rem;
     border-top: solid 1px #04756F;
     padding-top: .5rem;
+    background-color: black;
 }
 
 footer a {
-    color: #04756F;
+    color: rgba(255, 140, 0);
 }
 
 .terms {
